made index responsive

--- a/index.html
+++ b/index.html
@@ -53,16 +53,21 @@
 			<h1> Square<span class="bold">Meals </h1>
 			<a href="#notified"><div class="button"> Sign Up </div></a>
 			</nav>
-			<h2> Track your progress.<br>
+			<div id="main-content">
+			<div id="text">
+			<img src="img/half-mockup.png" id="half-mock">
+			<h2> Track your progress.
 			Achieve your goals. </h2>
-			<p> Nutrition doesn’t need to be a chore. SquareMeals makes tracking key nutrition information easy, to help you achieve your goals. Learn what to eat and how to power your life through nutrition. </p>
+			<p id="top-p"> Nutrition doesn’t need to be a chore. SquareMeals makes tracking key nutrition information easy, to help you achieve your goals. Learn what to eat and how to power your life through nutrition. </p>
+			</div>
 			<img src="img/mockup.png" id="mockup">
+			</div>
 			<img src="img/bottom-rectangle.png" id="bottom-rectangle">
 		</section>
 
 		<section id="notified">
-			<h2> Get notified when we launch. </h2>
 			<form action="https://formspree.io/squaremealsio@gmail.com" method="POST">
+			<h2> Get notified when we launch. </h2>
     			<input type="email" name="_replyto" id="email" placeholder="Email Address">
     			<input type="submit" value="Submit" id="submit">
 			</form>
